# parley

./: Cargo.toml
piet-parley/src/: lib.rs
src/: context.rs  font.rs  shape.rs
src/layout/: data.rs  run.rs
src/layout/line/: greedy.rs  mod.rs
src/resolve/: mod.rs
src/style/: mod.rs
