[package]
name = "parley"
version = "0.1.0"
authors = ["Chad Brokaw <cbrokaw@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
swash = { git = "https://github.com/lapce/swash" }
# swash = { path = "../swash" }
fount = { git = "https://github.com/lapce/fount" }
# fount = { path = "../fount" }

[workspace]
members = ["piet-parley"]
