[package]
name = "parley"
version = "0.1.0"
authors = ["Chad Brokaw <cbrokaw@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
once_cell = "1.17.1"
swash = { git = "https://github.com/dfrg/swash" }
fount = { git = "https://github.com/lapce/fount", rev = "7952647649c119be454691764c20768330a6e8f2" }

[workspace]
members = ["piet-parley"]
